--- a/src/pages/BookDriver/BookDriver.module.scss
+++ b/src/pages/BookDriver/BookDriver.module.scss
@@ -63,8 +63,11 @@
       display: flex;
       flex-direction: column;
       align-content: space-between;
+      position: relative;
       .fieldInput {
         border: none;
+        // position: absolute;
+        // z-index: -1;
 
         &:active {
           outline: none;
@@ -79,10 +82,35 @@
         font-family: "Poppins", sans-serif;
         font-size: 13px;
         font-weight: 700;
+        &:focus {
+          /* ví dụ: nếu muốn placeholder di chuyển lên khi focus */
+          top: -20px;
+          font-size: 12px;
+          color: #ff0000; /* Màu sắc khi focus tùy chọn */
+        }
       }
 
       .line {
         margin-bottom: 19px;
+      }
+
+      .list {
+        border: 1px solid lightgrey;
+        background-color: whitesmoke;
+        border-radius: 5px;
+        display: block;
+        position: absolute;
+        z-index: 100;
+      }
+      .listItem {
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        padding: 5px 20px;
+        color: black;
+      }
+      .listItem:hover {
+        background-color: lightgrey;
       }
     }
   }
