--- a/src/pages/s2Booking/s2Booking.scss
+++ b/src/pages/s2Booking/s2Booking.scss
@@ -1,8 +1,50 @@
+.autocomplete-dropdown-container {
+  width: 68rem;
+  margin-top: 1rem;
+  // position: absolute;
+
+  .suggestion-item,
+  .suggestion-item--active {
+    // box-sizing: border-box;
+    // flex-shrink: 0;
+    height: 5rem;
+    margin-bottom: 0.6155rem;
+    // padding: 1.846rem 4.514rem 1.846rem 1rem;
+    margin-left: 1rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    z-index: 100;
+  }
+
+  .suggestion-item:hover {
+    // background-color: red !important;
+    // cursor: pointer !important;
+
+  }
+
+  // .suggestion-item--active {
+  //   background-color: #e1a965 !important;
+  // }
+
+  span {
+    margin-left: 20 !important;
+
+  }
+
+  .textSuggestion {
+    margin-left: 20 !important;
+
+  }
+
+}
+
 .nd-book-driver-page-callcenter-k45 {
   background-color: #ffffff;
   height: 102.4rem;
   //position: relative;
   width: 100%;
+
   .mySvg ellipse {
     transform: translate(2px, 0.2rem);
   }
@@ -13,21 +55,22 @@
     font-size: 2.4rem;
     font-weight: 600;
     height: 3.6rem;
-    left: 19.6rem;
+    margin-left: 19.6rem;
     line-height: 1.5;
-    position: absolute;
+    // position: absolute;
     //top: 15.9rem;
     white-space: nowrap;
     width: 38.5rem;
   }
+
   .auto-group-wvdp-5nV {
     align-items: flex-start;
     //justify-content: center;
     display: flex;
     height: 38rem;
-    left: 19.6rem;
-    position: absolute;
-    top: 16.7rem;
+    margin-left: 19.6rem;
+    // position: absolute;
+    // margin-top: 16.7rem;
     width: 114.5rem;
 
     .auto-group-6mfb-ajF {
@@ -73,6 +116,7 @@
             white-space: nowrap;
             width: 2.8rem;
           }
+
           .placeholder-label-t9b {
             flex-shrink: 0;
             font-family: Roboto, "Source Sans Pro";
@@ -88,156 +132,16 @@
             gap: 10px;
             outline: none;
             border: none;
+
             &:active {
               border: none;
             }
           }
         }
       }
-      .triplist-VfB {
-        align-items: flex-end;
-        background-color: #ffffff;
-        border-radius: 1rem;
-        box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        flex-shrink: 0;
-        margin-bottom: 1.8rem;
-        padding: 0.5rem 1.6rem 0.938rem 1.4rem;
-        width: 100%;
 
-        .am-4-ch-nuB {
-          color: #dfd7d7;
-          display: flex;
-          flex-shrink: 0;
-          font-family: Quicksand, "Source Sans Pro";
-          font-size: 1rem;
-          font-weight: 400;
-          line-height: 1.3600000381;
-          margin: 0rem 0.8rem 0.1rem 0rem;
-          text-align: right;
-          white-space: nowrap;
-        }
-        .auto-group-yztf-Siq {
-          box-sizing: border-box;
-          color: #000000;
-          display: flex;
-          flex-shrink: 0;
-          font-family: Quicksand, "Source Sans Pro";
-          font-size: 1.5rem;
-          font-weight: 700;
-          height: 2.15rem;
-          line-height: 1.3599999746;
-          margin-bottom: 0.95rem;
-          padding-top: 0.05rem;
-          white-space: nowrap;
-          width: 100%;
-        }
-        .auto-group-4ws1-Wyb {
-          flex-shrink: 0;
-          height: 7.962rem;
-          position: relative;
-          width: 100%;
 
-          .group-37331-Ttq {
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            height: 7.962rem;
-            left: 0;
-            position: absolute;
-            top: 0;
-            width: 26.3rem;
 
-            .auto-group-eor7-NF7 {
-              align-items: flex-end;
-              display: flex;
-              flex-shrink: 0;
-              width: 100%;
-
-              .group-33301-iZs {
-                flex-shrink: 0;
-                height: 2.262rem;
-                margin-right: 2.407rem;
-                object-fit: contain;
-                position: relative;
-                vertical-align: top;
-                width: 2.793rem;
-              }
-              .address-E2R {
-                color: #000000;
-                display: flex;
-                flex-shrink: 0;
-                font-family: Inter, "Source Sans Pro";
-                font-size: 1.2rem;
-                font-weight: 500;
-                margin-left: 2rem;
-                line-height: 1.3999999364;
-                margin-bottom: 0.062rem;
-                white-space: nowrap;
-                font-size: 12px;
-                line-height: 140%; /* 16.8px */
-              }
-            }
-            .auto-group-9tvf-5Hw {
-              box-sizing: border-box;
-              display: flex;
-              flex-direction: column;
-              flex-shrink: 0;
-              padding: 0.838rem 1.4rem 0.8rem 1.4rem;
-              width: 100%;
-
-              .line-63-PZX {
-                background-color: rgba(89, 85, 85, 0.5);
-                flex-shrink: 0;
-                height: 0.1rem;
-                margin-bottom: 0.1rem;
-                width: 0.1rem;
-              }
-              .line-69-6Tw {
-                background-color: rgba(89, 85, 85, 0.5);
-                flex-shrink: 0;
-                height: 0.5rem;
-                width: 0.1rem;
-              }
-              .line-68-pPw {
-                background-color: rgba(89, 85, 85, 0.5);
-                flex-shrink: 0;
-                height: 0.5rem;
-                margin-bottom: 0.1rem;
-                width: 0.1rem;
-              }
-              .line-66-wzM {
-                background-color: rgba(89, 85, 85, 0.5);
-                flex-shrink: 0;
-                height: 0.5rem;
-                width: 0.1rem;
-              }
-            }
-            .auto-group-rwgr-UzH {
-              flex-shrink: 0;
-              width: 100%;
-
-              .group-33302-ETf {
-                height: 2.262rem;
-                object-fit: contain;
-                position: relative;
-                vertical-align: top;
-                width: 2.8926rem;
-              }
-            }
-          }
-          .line-70-kS1 {
-            background-color: #d5d4d4;
-            height: 0.03rem;
-            left: 5.2rem;
-            position: absolute;
-            top: 3.8rem;
-            width: 26.8rem;
-          }
-        }
-      }
       .triplist-cDK {
         box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
         flex-shrink: 0;
@@ -254,6 +158,7 @@
           top: 0.1rem;
           width: 35rem;
         }
+
         .group-37331-eQu {
           align-items: center;
           display: flex;
@@ -279,6 +184,7 @@
               vertical-align: top;
               width: 2.793rem;
             }
+
             .address-qkH {
               color: #000000;
               display: flex;
@@ -291,6 +197,7 @@
               white-space: nowrap;
             }
           }
+
           .auto-group-scnh-jqf {
             box-sizing: border-box;
             display: flex;
@@ -306,12 +213,14 @@
               margin-bottom: 0.1rem;
               width: 0.1rem;
             }
+
             .line-69-yED {
               background-color: rgba(89, 85, 85, 0.5);
               flex-shrink: 0;
               height: 0.5rem;
               width: 0.1rem;
             }
+
             .auto-group-z87w-JnH {
               border-left: solid 0.1rem rgba(89, 85, 85, 0.5);
               border-top: solid 0.03rem #d5d4d4;
@@ -321,6 +230,7 @@
               margin-bottom: 0.1rem;
               width: 100%;
             }
+
             .line-66-oDF {
               background-color: rgba(89, 85, 85, 0.5);
               flex-shrink: 0;
@@ -328,6 +238,7 @@
               width: 0.1rem;
             }
           }
+
           .auto-group-w53b-YAq {
             flex-shrink: 0;
             height: 2.262rem;
@@ -336,6 +247,7 @@
             width: 33.5842rem;
           }
         }
+
         .trpaa001-rxD {
           color: #000000;
           display: flex;
@@ -350,6 +262,7 @@
           white-space: nowrap;
           width: 7.2rem;
         }
+
         .am-4-ch-wCy {
           color: #dfd7d7;
           display: flex;
@@ -367,6 +280,7 @@
         }
       }
     }
+
     .auto-group-bk2q-Bt1 {
       align-items: center;
       display: flex;
@@ -400,9 +314,10 @@
             font-weight: 600;
             line-height: 1.5;
           }
-          .thng-tin-chung--TqX-sub-1 {
-          }
+
+          .thng-tin-chung--TqX-sub-1 {}
         }
+
         .ghost-S5B {
           border-radius: 0.8rem;
           cursor: pointer;
@@ -413,6 +328,7 @@
           width: 3.2rem;
         }
       }
+
       .input-xZK {
         background-color: #f9fafb;
         border: solid 0.1rem #e5e7eb;
@@ -437,6 +353,7 @@
             margin-bottom: 0.4rem;
             white-space: nowrap;
           }
+
           .website-jCh {
             color: #111827;
             font-family: Inter, "Source Sans Pro";
@@ -447,6 +364,7 @@
           }
         }
       }
+
       .input-1AD {
         background-color: #f9fafb;
         border: solid 0.1rem #e5e7eb;
@@ -471,6 +389,7 @@
             margin-bottom: 0.4rem;
             white-space: nowrap;
           }
+
           .available-products-at-our-website-znq {
             color: #111827;
             font-family: Inter, "Source Sans Pro";
@@ -482,6 +401,7 @@
             outline: none;
             border: none;
             background-color: #f9fafb;
+
             &::placeholder {
               color: #111827;
               font-family: Inter, "Source Sans Pro";
@@ -491,6 +411,7 @@
           }
         }
       }
+
       .input-Ui1 {
         background-color: #f9fafb;
         border: solid 0.1rem #e5e7eb;
@@ -515,6 +436,7 @@
             margin-bottom: 0.4rem;
             white-space: nowrap;
           }
+
           .available-products-at-our-website-pQV {
             color: #111827;
             font-family: Inter, "Source Sans Pro";
@@ -525,6 +447,7 @@
           }
         }
       }
+
       .rectangle-1748-hjB {
         background-color: #e5e7eb;
         flex-shrink: 0;
@@ -533,6 +456,7 @@
       }
     }
   }
+
   .input-qqP {
     align-items: center;
 
@@ -547,21 +471,23 @@
     justify-content: center;
     left: 64.1rem;
     line-height: 1.2;
-    position: absolute;
+    // position: absolute;
     top: 83.1rem;
     white-space: nowrap;
     width: 70rem;
   }
+
   .maps-zoom-levels-3-street-HSV {
     //height: 27.9rem;
     left: 64.1rem;
-    position: absolute;
+    // position: absolute;
     top: 50.9rem;
     width: 697px;
     height: 313px;
     flex-shrink: 0;
-    background: url("https://i.stack.imgur.com/HILmr.png"),
-      lightgray 50% / cover no-repeat;
+    // background: url("https://i.stack.imgur.com/HILmr.png"),
+    //   lightgray 50% / cover no-repeat;
+    // z-index: -1;
 
     .maps-zoom-level-3-street-zLu {
       background-color: #ffffff;
@@ -579,6 +505,7 @@
         vertical-align: top;
         width: 106.1rem;
       }
+
       .map-of-birmingham-street-45s {
         height: 67.9rem;
         left: -21rem;
@@ -590,6 +517,14 @@
       }
     }
   }
+
+  .googleMapCSS {
+    display: flex;
+    // justify-content:;
+    flex-direction: column;
+    margin-left: 70rem;
+  }
+
   .triplist-A8u {
     align-items: flex-end;
     background-color: #ffffff;
@@ -617,6 +552,7 @@
       text-align: right;
       white-space: nowrap;
     }
+
     .auto-group-tinh-ukh {
       box-sizing: border-box;
       color: #000000;
@@ -632,6 +568,7 @@
       white-space: nowrap;
       width: 32rem;
     }
+
     .group-37331-a69 {
       align-items: center;
       display: flex;
@@ -654,6 +591,7 @@
           vertical-align: top;
           width: 2.793rem;
         }
+
         .address-Brd {
           color: #000000;
           display: flex;
@@ -666,6 +604,7 @@
           white-space: nowrap;
         }
       }
+
       .auto-group-hmzf-uXj {
         box-sizing: border-box;
         display: flex;
@@ -681,6 +620,7 @@
           margin: 0rem 0rem 0.1rem 1.4rem;
           width: 0.1rem;
         }
+
         .line-69-M8q {
           background-color: rgba(89, 85, 85, 0.5);
           flex-shrink: 0;
@@ -688,6 +628,7 @@
           margin-left: 1.4rem;
           width: 0.1rem;
         }
+
         .auto-group-stvy-54q {
           border-left: solid 0.1rem rgba(89, 85, 85, 0.5);
           border-top: solid 0.03rem #d5d4d4;
@@ -697,6 +638,7 @@
           margin: 0rem 1.584rem 0.1rem 1.4rem;
           width: calc(100% - 2.9842rem);
         }
+
         .line-66-jfB {
           background-color: rgba(89, 85, 85, 0.5);
           flex-shrink: 0;
@@ -704,6 +646,7 @@
           margin: 0rem 0rem 0.8rem 1.4rem;
           width: 0.1rem;
         }
+
         .auto-group-bqbk-FNd {
           flex-shrink: 0;
           height: 2.262rem;
@@ -714,6 +657,7 @@
       }
     }
   }
+
   .header-callcenter-in1 {
     box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
     height: 10.9rem;
@@ -730,6 +674,7 @@
       top: 0;
       width: 144rem;
     }
+
     .about-mVP {
       color: #000000;
       cursor: pointer;
@@ -746,6 +691,7 @@
       white-space: nowrap;
       width: 7.2rem;
     }
+
     .book-qVF {
       color: #fa8d1d;
       font-family: Inter, "Source Sans Pro";
@@ -761,6 +707,7 @@
       white-space: nowrap;
       width: 5.9rem;
     }
+
     .managebox-X7B {
       box-sizing: border-box;
       color: #000000;
@@ -779,6 +726,7 @@
       white-space: nowrap;
       width: 12.7rem;
     }
+
     .home-BhX {
       color: #000000;
       cursor: pointer;
@@ -795,6 +743,7 @@
       white-space: nowrap;
       width: 6.2rem;
     }
+
     .getgo-call-center-fch {
       color: #fa8d1d;
       font-family: Inter, "Source Sans Pro";
@@ -808,6 +757,7 @@
       white-space: nowrap;
       width: 43.6rem;
     }
+
     .image-12-YgV {
       height: 7.0886rem;
       left: 7.3rem;
