--- a/src/pages/s2Booking/itemTrip/itemTrip.scss
+++ b/src/pages/s2Booking/itemTrip/itemTrip.scss
@@ -1,154 +1,158 @@
 .triplist-VfB {
-    align-items: flex-end;
-    background-color: #ffffff;
-    border-radius: 1rem;
-    box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
-    box-sizing: border-box;
+  align-items: flex-end;
+  background-color: #ffffff;
+  border-radius: 1rem;
+  box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  margin-bottom: 1.8rem;
+  padding: 0.5rem 1.6rem 0.938rem 1.4rem;
+  width: 100%;
+  cursor: pointer;
+  //   :hover {
+  //     box-shadow: 0 0.6rem 0.6rem rgba(0, 0, 0, 0.25);
+  //   }
+
+  .am-4-ch-nuB {
+    color: #dfd7d7;
     display: flex;
-    flex-direction: column;
     flex-shrink: 0;
-    margin-bottom: 1.8rem;
-    padding: 0.5rem 1.6rem 0.938rem 1.4rem;
+    font-family: Quicksand, "Source Sans Pro";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.3600000381;
+    margin: 0rem 0.8rem 0.1rem 0rem;
+    text-align: right;
+    white-space: nowrap;
+  }
+
+  .auto-group-yztf-Siq {
+    box-sizing: border-box;
+    color: #000000;
+    display: flex;
+    flex-shrink: 0;
+    font-family: Quicksand, "Source Sans Pro";
+    font-size: 1.5rem;
+    font-weight: 700;
+    height: 2.15rem;
+    line-height: 1.3599999746;
+    margin-bottom: 0.95rem;
+    padding-top: 0.05rem;
+    white-space: nowrap;
+    width: 100%;
+  }
+
+  .auto-group-4ws1-Wyb {
+    flex-shrink: 0;
+    height: 7.962rem;
+    position: relative;
     width: 100%;
 
-    .am-4-ch-nuB {
-        color: #dfd7d7;
+    .group-37331-Ttq {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      height: 7.962rem;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 26.3rem;
+
+      .auto-group-eor7-NF7 {
+        align-items: flex-end;
         display: flex;
         flex-shrink: 0;
-        font-family: Quicksand, "Source Sans Pro";
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 1.3600000381;
-        margin: 0rem 0.8rem 0.1rem 0rem;
-        text-align: right;
-        white-space: nowrap;
-    }
+        width: 100%;
 
-    .auto-group-yztf-Siq {
+        .group-33301-iZs {
+          flex-shrink: 0;
+          height: 2.262rem;
+          margin-right: 2.407rem;
+          object-fit: contain;
+          position: relative;
+          vertical-align: top;
+          width: 2.793rem;
+        }
+
+        .address-E2R {
+          color: #000000;
+          display: flex;
+          flex-shrink: 0;
+          font-family: Inter, "Source Sans Pro";
+          font-size: 1.2rem;
+          font-weight: 500;
+          margin-left: 2rem;
+          line-height: 1.3999999364;
+          margin-bottom: 0.062rem;
+          white-space: nowrap;
+          font-size: 12px;
+          line-height: 140%;
+          /* 16.8px */
+        }
+      }
+
+      .auto-group-9tvf-5Hw {
         box-sizing: border-box;
-        color: #000000;
         display: flex;
+        flex-direction: column;
         flex-shrink: 0;
-        font-family: Quicksand, "Source Sans Pro";
-        font-size: 1.5rem;
-        font-weight: 700;
-        height: 2.15rem;
-        line-height: 1.3599999746;
-        margin-bottom: 0.95rem;
-        padding-top: 0.05rem;
-        white-space: nowrap;
-        width: 100%;
-    }
-
-    .auto-group-4ws1-Wyb {
-        flex-shrink: 0;
-        height: 7.962rem;
-        position: relative;
+        padding: 0.838rem 1.4rem 0.8rem 1.4rem;
         width: 100%;
 
-        .group-37331-Ttq {
-            align-items: center;
-            display: flex;
-            flex-direction: column;
-            height: 7.962rem;
-            left: 0;
-            position: absolute;
-            top: 0;
-            width: 26.3rem;
-
-            .auto-group-eor7-NF7 {
-                align-items: flex-end;
-                display: flex;
-                flex-shrink: 0;
-                width: 100%;
-
-                .group-33301-iZs {
-                    flex-shrink: 0;
-                    height: 2.262rem;
-                    margin-right: 2.407rem;
-                    object-fit: contain;
-                    position: relative;
-                    vertical-align: top;
-                    width: 2.793rem;
-                }
-
-                .address-E2R {
-                    color: #000000;
-                    display: flex;
-                    flex-shrink: 0;
-                    font-family: Inter, "Source Sans Pro";
-                    font-size: 1.2rem;
-                    font-weight: 500;
-                    margin-left: 2rem;
-                    line-height: 1.3999999364;
-                    margin-bottom: 0.062rem;
-                    white-space: nowrap;
-                    font-size: 12px;
-                    line-height: 140%;
-                    /* 16.8px */
-                }
-            }
-
-            .auto-group-9tvf-5Hw {
-                box-sizing: border-box;
-                display: flex;
-                flex-direction: column;
-                flex-shrink: 0;
-                padding: 0.838rem 1.4rem 0.8rem 1.4rem;
-                width: 100%;
-
-                .line-63-PZX {
-                    background-color: rgba(89, 85, 85, 0.5);
-                    flex-shrink: 0;
-                    height: 0.1rem;
-                    margin-bottom: 0.1rem;
-                    width: 0.1rem;
-                }
-
-                .line-69-6Tw {
-                    background-color: rgba(89, 85, 85, 0.5);
-                    flex-shrink: 0;
-                    height: 0.5rem;
-                    width: 0.1rem;
-                }
-
-                .line-68-pPw {
-                    background-color: rgba(89, 85, 85, 0.5);
-                    flex-shrink: 0;
-                    height: 0.5rem;
-                    margin-bottom: 0.1rem;
-                    width: 0.1rem;
-                }
-
-                .line-66-wzM {
-                    background-color: rgba(89, 85, 85, 0.5);
-                    flex-shrink: 0;
-                    height: 0.5rem;
-                    width: 0.1rem;
-                }
-            }
-
-            .auto-group-rwgr-UzH {
-                flex-shrink: 0;
-                width: 100%;
-
-                .group-33302-ETf {
-                    height: 2.262rem;
-                    object-fit: contain;
-                    position: relative;
-                    vertical-align: top;
-                    width: 2.8926rem;
-                }
-            }
+        .line-63-PZX {
+          background-color: rgba(89, 85, 85, 0.5);
+          flex-shrink: 0;
+          height: 0.1rem;
+          margin-bottom: 0.1rem;
+          width: 0.1rem;
         }
 
-        .line-70-kS1 {
-            background-color: #d5d4d4;
-            height: 0.03rem;
-            left: 5.2rem;
-            position: absolute;
-            top: 3.8rem;
-            width: 26.8rem;
+        .line-69-6Tw {
+          background-color: rgba(89, 85, 85, 0.5);
+          flex-shrink: 0;
+          height: 0.5rem;
+          width: 0.1rem;
         }
+
+        .line-68-pPw {
+          background-color: rgba(89, 85, 85, 0.5);
+          flex-shrink: 0;
+          height: 0.5rem;
+          margin-bottom: 0.1rem;
+          width: 0.1rem;
+        }
+
+        .line-66-wzM {
+          background-color: rgba(89, 85, 85, 0.5);
+          flex-shrink: 0;
+          height: 0.5rem;
+          width: 0.1rem;
+        }
+      }
+
+      .auto-group-rwgr-UzH {
+        flex-shrink: 0;
+        width: 100%;
+
+        .group-33302-ETf {
+          height: 2.262rem;
+          object-fit: contain;
+          position: relative;
+          vertical-align: top;
+          width: 2.8926rem;
+        }
+      }
     }
+
+    .line-70-kS1 {
+      background-color: #d5d4d4;
+      height: 0.03rem;
+      left: 5.2rem;
+      position: absolute;
+      top: 3.8rem;
+      width: 26.8rem;
+    }
+  }
 }
