--- a/src/pages/s2Booking/s2Booking.scss
+++ b/src/pages/s2Booking/s2Booking.scss
@@ -1,7 +1,9 @@
 .autocomplete-dropdown-container {
-  width: 68rem;
+  width: 70rem;
   margin-top: 1rem;
-  // position: absolute;
+  .iconSvg {
+    margin-left: 1rem;
+  }
 
   .suggestion-item,
   .suggestion-item--active {
@@ -10,17 +12,17 @@
     height: 5rem;
     margin-bottom: 0.6155rem;
     // padding: 1.846rem 4.514rem 1.846rem 1rem;
-    margin-left: 1rem;
+    // margin-left: 1rem;
     width: 100%;
     display: flex;
     align-items: center;
+    border-radius: 10px;
     z-index: 100;
   }
 
   .suggestion-item:hover {
     // background-color: red !important;
     // cursor: pointer !important;
-
   }
 
   // .suggestion-item--active {
@@ -29,14 +31,12 @@
 
   span {
     margin-left: 20 !important;
-
   }
 
   .textSuggestion {
-    margin-left: 20 !important;
-
+    margin-left: 20px !important;
+    padding: auto;
   }
-
 }
 
 .nd-book-driver-page-callcenter-k45 {
@@ -139,8 +139,6 @@
           }
         }
       }
-
-
 
       .triplist-cDK {
         box-shadow: 0 0.4rem 0.4rem rgba(0, 0, 0, 0.25);
@@ -315,7 +313,8 @@
             line-height: 1.5;
           }
 
-          .thng-tin-chung--TqX-sub-1 {}
+          .thng-tin-chung--TqX-sub-1 {
+          }
         }
 
         .ghost-S5B {
@@ -394,7 +393,7 @@
             color: #111827;
             font-family: Inter, "Source Sans Pro";
             font-size: 1.4rem;
-            width: 68rem;
+            //width: 68rem;
             font-weight: 400;
             line-height: 1.7142857143;
             white-space: nowrap;
@@ -419,7 +418,7 @@
         box-sizing: border-box;
         flex-shrink: 0;
         height: 7.2rem;
-        margin-bottom: 3.3rem;
+        margin-bottom: 1.2rem;
         padding: 1.2rem;
         width: 100%;
 
@@ -459,7 +458,7 @@
 
   .input-qqP {
     align-items: center;
-
+    margin-top: 2rem;
     background-color: #fa8d1d;
     border-radius: 0.8rem;
     color: #ffffff;
