--- a/src/pages/s1Booking/s1Booking.scss
+++ b/src/pages/s1Booking/s1Booking.scss
@@ -1,3 +1,43 @@
+.notification {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 2;
+  width: 30rem;
+  height: 20rem;
+
+  .facircle {
+    color: green;
+    height: 8rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
+  }
+}
+
+.message {
+  flex: 1;
+}
+
+.close-button {
+  background-color: #ffffff;
+  color: #ff0000;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+  position: absolute;
+  top: 15.5rem;
+  right: 1rem;
+}
+
 .st-book-driver-page-callcenter-C13 {
   background-color: #ffffff;
   height: 102.4rem;
@@ -17,6 +57,7 @@
     white-space: nowrap;
     width: 23.9rem;
   }
+
   .section-header-Z1w {
     align-items: center;
     display: flex;
@@ -45,9 +86,9 @@
         font-weight: 600;
         line-height: 1.5;
       }
-      .thng-tin-chung--SbX-sub-1 {
-      }
+
     }
+
     .ghost-2CM {
       border-radius: 0.8rem;
       cursor: pointer;
@@ -58,6 +99,18 @@
       width: 3.2rem;
     }
   }
+
+  .errMsgInput {
+    color: red;
+    font-family: Inter, "Source Sans Pro";
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 1.6666666667;
+    margin-bottom: 0.4rem;
+    margin-top: 1rem;
+    white-space: nowrap;
+  }
+
   .input-LTw {
     background-color: #f9fafb;
     border: solid 0.1rem #e5e7eb;
@@ -82,7 +135,9 @@
         line-height: 1.6666666667;
         margin-bottom: 0.4rem;
         white-space: nowrap;
+
       }
+
       .website-hC1 {
         color: #111827;
         font-family: Inter, "Source Sans Pro";
@@ -94,12 +149,14 @@
         outline: none;
         border: none;
         background-color: #f9fafb;
+
         &::placeholder {
           color: #111827;
         }
       }
     }
   }
+
   .input-P4q {
     background-color: #f9fafb;
     border: solid 0.1rem #e5e7eb;
@@ -109,7 +166,7 @@
     left: 37rem;
     padding: 1.2rem;
     position: absolute;
-    top: 29.1rem;
+    top: 30rem;
     width: 80rem;
 
     .frame-79-uos {
@@ -125,6 +182,7 @@
         margin-bottom: 0.4rem;
         white-space: nowrap;
       }
+
       .available-products-at-our-website-av1 {
         color: #111827;
         font-family: Inter, "Source Sans Pro";
@@ -136,12 +194,14 @@
         outline: none;
         border: none;
         background-color: #f9fafb;
+
         &::placeholder {
           color: #111827;
         }
       }
     }
   }
+
   .input-mUh {
     background-color: #f9fafb;
     border: solid 0.1rem #e5e7eb;
@@ -151,7 +211,7 @@
     left: 37rem;
     padding: 1.2rem;
     position: absolute;
-    top: 37.5rem;
+    top: 39rem;
     width: 80rem;
 
     .frame-79-WBP {
@@ -167,6 +227,21 @@
         margin-bottom: 0.4rem;
         white-space: nowrap;
       }
+
+      .selectTypeCar {
+        border: none;
+        width: 76rem;
+        font-family: Inter, "Source Sans Pro";
+        cursor: pointer;
+        outline: none;
+
+        option {
+          font-family: Inter, "Source Sans Pro";
+
+        }
+
+      }
+
       .available-products-at-our-website-BHX {
         color: #111827;
         font-family: Inter, "Source Sans Pro";
@@ -178,12 +253,14 @@
         outline: none;
         border: none;
         background-color: #f9fafb;
+
         &::placeholder {
           color: #111827;
         }
       }
     }
   }
+
   .input-tBw {
     align-items: center;
     background-color: #fa8d1d;
@@ -205,6 +282,7 @@
     border: none;
     cursor: pointer;
   }
+
   .rectangle-1748-MbK {
     background-color: #e5e7eb;
     height: 0.1rem;
@@ -213,6 +291,7 @@
     top: 48rem;
     width: 80rem;
   }
+
   .general-section-header-gNh {
     align-items: center;
     display: flex;
@@ -232,6 +311,7 @@
       margin-right: 55.5rem;
       white-space: nowrap;
     }
+
     .ghost-j65 {
       border-radius: 0.8rem;
       cursor: pointer;
@@ -242,6 +322,7 @@
       width: 3.2rem;
     }
   }
+
   .tm-kim-chuyn-i-gn-nht-t-st-khch-hng-G61 {
     color: #6b7280;
     font-family: Inter, "Source Sans Pro";
@@ -255,7 +336,8 @@
     white-space: nowrap;
     width: 32.1rem;
   }
-  .listHistory{
+
+  .listHistory {
     align-items: center;
     background-color: #ffffff;
     box-sizing: border-box;
@@ -269,6 +351,7 @@
     top: 55.7rem;
     width: 80rem;
   }
+
   .configuration-card-Kpy {
     align-items: center;
     background-color: #ffffff;
@@ -304,10 +387,10 @@
       }
 
       .a-ch-th-nht-yed {
-        margin-top: 1.5rem;
+        margin-top: 2rem;
         color: #111827;
         font-family: Inter, "Source Sans Pro";
-        font-size: 1.4rem;
+        font-size: 1.8rem;
         font-weight: 600;
         height: 2.4rem;
         // left: 23rem;
@@ -317,6 +400,7 @@
         white-space: nowrap;
         width: 10.7rem;
       }
+
       .rule-icon-f1f {
         border-radius: 0.8rem;
         height: 51.2rem;
@@ -327,6 +411,7 @@
         vertical-align: top;
         width: 38.4rem;
       }
+
       .frame-78-auK {
         align-items: center;
         display: flex;
@@ -346,6 +431,7 @@
           margin-right: 0.8rem;
           white-space: nowrap;
         }
+
         .more-dsb {
           color: #9ca3af;
           flex-shrink: 0;
@@ -357,6 +443,7 @@
         }
       }
     }
+
     .ghost-B8R {
       border-radius: 0.4rem;
       cursor: pointer;
@@ -367,6 +454,7 @@
       width: 3.2rem;
     }
   }
+
   .header-callcenter-tHj {
     align-items: center;
     background-color: #ffffff;
@@ -388,6 +476,7 @@
       vertical-align: top;
       width: 7rem;
     }
+
     .getgo-call-center-uTj {
       color: #fa8d1d;
       flex-shrink: 0;
@@ -398,6 +487,7 @@
       margin: 0.511rem 33.75rem 0rem 0rem;
       white-space: nowrap;
     }
+
     .home-QQV {
       color: #000000;
       cursor: pointer;
@@ -411,6 +501,7 @@
       text-align: center;
       white-space: nowrap;
     }
+
     .managebox-Jkm {
       box-sizing: border-box;
       color: #000000;
@@ -427,6 +518,7 @@
       text-align: center;
       white-space: nowrap;
     }
+
     .book-nA9 {
       color: #fa8d1d;
       flex-shrink: 0;
@@ -439,6 +531,7 @@
       text-align: center;
       white-space: nowrap;
     }
+
     .about-BTB {
       color: #000000;
       cursor: pointer;
