add login & logout action to home

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -323,9 +323,9 @@ body {
 
   &:hover {
     cursor: pointer;
-    background-color: rgba(255, 51, 102, 0.1);
-    border: 1px solid rgba(255, 51, 102, 0.1);
-    color: #fa8d1d;
+    background-color: #fa8d1d;
+    border: 1px solid #fa8d1d;
+    color: white;
     box-shadow: none;
   }
 
