add logic s2 and s3

--- a/src/pages/s2Booking/s2Booking.scss
+++ b/src/pages/s2Booking/s2Booking.scss
@@ -1,6 +1,7 @@
 .autocomplete-dropdown-container {
   width: 70rem;
   margin-top: 1rem;
+
   .iconSvg {
     margin-left: 1rem;
   }
@@ -313,8 +314,7 @@
             line-height: 1.5;
           }
 
-          .thng-tin-chung--TqX-sub-1 {
-          }
+          .thng-tin-chung--TqX-sub-1 {}
         }
 
         .ghost-S5B {
@@ -395,6 +395,7 @@
             font-size: 1.4rem;
             //width: 68rem;
             font-weight: 400;
+            width: 305%;
             line-height: 1.7142857143;
             white-space: nowrap;
             outline: none;
