--- a/src/pages/s2Booking/itemTrip/itemTrip.scss
+++ b/src/pages/s2Booking/itemTrip/itemTrip.scss
@@ -1,3 +1,7 @@
+.select_trip {
+  box-shadow: 0 0.4rem 0.4rem #fa8d1d8c !important;
+}
+
 .triplist-VfB {
   align-items: flex-end;
   background-color: #ffffff;
@@ -11,9 +15,14 @@
   padding: 0.5rem 1.6rem 0.938rem 1.4rem;
   width: 100%;
   cursor: pointer;
+
   //   :hover {
   //     box-shadow: 0 0.6rem 0.6rem rgba(0, 0, 0, 0.25);
   //   }
+  &:hover {
+    box-shadow: 0 0.4rem 0.4rem #fa8d1d8c !important;
+
+  }
 
   .am-4-ch-nuB {
     color: #dfd7d7;
@@ -32,6 +41,7 @@
     box-sizing: border-box;
     color: #000000;
     display: flex;
+    justify-content: space-between;
     flex-shrink: 0;
     font-family: Quicksand, "Source Sans Pro";
     font-size: 1.5rem;
@@ -56,9 +66,9 @@
       flex-direction: column;
       height: 7.962rem;
       left: 0;
-      position: absolute;
+      // position: absolute;
       top: 0;
-      width: 26.3rem;
+      // width: 26.3rem;
 
       .auto-group-eor7-NF7 {
         align-items: flex-end;
@@ -86,9 +96,16 @@
           margin-left: 2rem;
           line-height: 1.3999999364;
           margin-bottom: 0.062rem;
-          white-space: nowrap;
+          // white-space: nowrap;
           font-size: 12px;
           line-height: 140%;
+          // max-width: 10rem;
+          max-width: 26rem;
+          display: -webkit-box;
+          -webkit-line-clamp: 1;
+          /* Số dòng tối đa */
+          -webkit-box-orient: vertical;
+          overflow: hidden;
           /* 16.8px */
         }
       }
@@ -154,5 +171,37 @@
       top: 3.8rem;
       width: 26.8rem;
     }
+  }
+}
+
+.tripstatus {
+  align-items: center;
+  background-color:
+    #fdedeb;
+  border-radius:
+    0.7rem;
+  box-sizing:
+    border-box;
+  display:
+    flex;
+  flex-shrink:
+    0;
+  height:
+    2.1rem;
+  margin-bottom:
+    0.05rem;
+  padding:
+    0.5rem 1.298rem 0.6rem 0.936rem;
+
+  span {
+    color: #fc4661;
+    margin-left: 2px;
+    flex-shrink: 0;
+    font-family: Inter, 'Source Sans Pro';
+    font-size: 0.7rem;
+    font-weight: 500;
+    line-height: 1.4000000272;
+    text-align: center;
+    white-space: nowrap;
   }
 }
