--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -5,9 +5,9 @@
 .btnSearch {
   padding: 11.5px;
 }
-svg {
-  color: #fff;
-}
+// svg {
+//   color: #fff;
+// }
 input::placeholder {
   font-family: Arial, sans-serif;
   font-size: 14px;
