--- a/src/pages/s1Booking/s1Booking.scss
+++ b/src/pages/s1Booking/s1Booking.scss
@@ -32,7 +32,7 @@
   border: none;
   padding: 5px 10px;
   cursor: pointer;
-  position: absolute;
+
   top: 15.5rem;
   right: 1rem;
 }
@@ -42,6 +42,9 @@
   // height: 102.4rem;
   //position: relative;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   .errorMsg {
     color: red;
@@ -53,12 +56,12 @@
     margin: 0;
 
     &Address {
-      margin-top: 16.6rem;
+      // margin-top: 16.6rem;
       margin-left: 70rem;
     }
 
     &Type {
-      margin-top: 7.1rem;
+      // margin-top: 7.1rem;
       margin-left: 70rem;
     }
   }
@@ -75,7 +78,7 @@
     height: 3.6rem;
     left: 36.8rem;
     line-height: 1.5;
-    position: absolute;
+
     //top: 17.5rem;
     white-space: nowrap;
     width: 23.9rem;
@@ -86,7 +89,7 @@
     display: flex;
     height: 3.2rem;
     left: 37rem;
-    position: absolute;
+
     top: 17.9rem;
     width: 79rem;
     justify-content: space-between;
@@ -142,7 +145,7 @@
     height: 7.2rem;
     left: 37rem;
     padding: 1.2rem;
-    position: absolute;
+
     top: 20.7rem;
     width: 80rem;
 
@@ -173,7 +176,7 @@
         background-color: #f9fafb;
 
         &::placeholder {
-          color: #111827;
+          color: rgb(17, 24, 39, 0.3);
         }
       }
     }
@@ -187,7 +190,7 @@
     height: 7.2rem;
     left: 37rem;
     padding: 1.2rem;
-    position: absolute;
+
     top: 30rem;
     width: 80rem;
 
@@ -218,10 +221,24 @@
         background-color: #f9fafb;
 
         &::placeholder {
-          color: #111827;
+          color: rgb(17, 24, 39, 0.3);
+
         }
       }
     }
+  }
+
+  .input-mUh1 {
+    background-color: #f9fafb;
+    border: solid 0.1rem #e5e7eb;
+    border-radius: 0.8rem;
+    box-sizing: border-box;
+    height: 7.2rem;
+    left: 37rem;
+    padding: 1.2rem;
+
+    top: 47rem;
+    width: 80rem;
   }
 
   .input-mUh {
@@ -232,7 +249,7 @@
     height: 7.2rem;
     left: 37rem;
     padding: 1.2rem;
-    position: absolute;
+
     top: 39rem;
     width: 80rem;
 
@@ -274,7 +291,8 @@
       }
 
       .selectTypeCar::-webkit-select-placeholder {
-        color: #999;
+        color: rgb(17, 24, 39, 0.3);
+
         /* Màu chữ khi placeholder xuất hiện */
       }
 
@@ -308,7 +326,8 @@
         background-color: #f9fafb;
 
         &::placeholder {
-          color: #111827;
+          color: rgb(17, 24, 39, 0.3);
+
         }
       }
     }
@@ -327,7 +346,7 @@
     justify-content: center;
     left: 37rem;
     line-height: 1.2;
-    // position: absolute;
+    // 
     // top: 64.6rem;
     white-space: nowrap;
     width: 79rem;
@@ -341,7 +360,7 @@
     background-color: #e5e7eb;
     height: 0.1rem;
     left: 37rem;
-    position: absolute;
+
     top: 48rem;
     width: 80rem;
   }
@@ -351,9 +370,9 @@
     display: flex;
     height: 3.2rem;
     left: 37rem;
-    position: absolute;
-    top: 49.7rem;
-    width: 70rem;
+
+    margin-top: 2rem;
+    width: 78rem;
 
     .lch-s-t-xe-zuB {
       color: #111827;
@@ -385,10 +404,10 @@
     height: 2.4rem;
     left: 37rem;
     line-height: 1.7142857143;
-    position: absolute;
-    top: 51.9rem;
+
+    top: 61.9rem;
     white-space: nowrap;
-    width: 32.1rem;
+    width: 78rem;
   }
 
   .listHistory {
@@ -401,8 +420,8 @@
     left: 37rem;
     overflow: hidden;
     padding-right: 2.4rem;
-    position: absolute;
-    top: 55.7rem;
+
+    top: 65.7rem;
     width: 80rem;
   }
 
@@ -425,7 +444,7 @@
     padding-right: 2.4rem;
     margin-left: 2.5rem;
     margin-bottom: 1rem;
-    // position: absolute;
+    // 
     // top: 55.7rem;
     width: 80rem;
 
@@ -455,7 +474,7 @@
         height: 2.4rem;
         // left: 23rem;
         line-height: 1.7142857143;
-        //position: absolute;
+        //
         // top: 23.2rem;
         white-space: wrap;
         width: 100%;
@@ -466,7 +485,7 @@
         height: 51.2rem;
         left: 0;
         object-fit: contain;
-        position: absolute;
+
         top: 0;
         vertical-align: top;
         width: 38.4rem;
@@ -477,7 +496,7 @@
         display: flex;
         height: 2rem;
         // left: 23rem;
-        //position: absolute;
+        //
         top: 25.8rem;
         width: 27.4rem;
 
@@ -524,7 +543,7 @@
     height: 10rem;
     left: 0;
     padding: 1.4rem 15.8rem 1.511rem 7.3rem;
-    position: absolute;
+
     top: 0;
     width: 144rem;
 
